<resources>
    <string name="_default">Default</string>
    <string name="app_name" translatable="false">Arcane Tracker</string>
    <string name="appVersion">App version</string>
    <string name="arcane_tracker_running">Arcane Tracker is running</string>
    <string name="arenaDeck">Arena Deck</string>
    <string name="authorizeAndPlay">Authorize and play!</string>
    <string name="autoAdd">Auto add cards</string>
    <string name="autoAddExplanation">When a deck is incomplete, add cards played to the deck automatically so you don\'t have to edit the deck manually.</string>
    <string name="autoDetect">Auto detect deck</string>
    <string name="autoDetectExplanation">When the game begins, try to guess the best available deck and activate it automatically. This might fail if you have several deck of the same class.</string>
    <string name="autoHideTitle">Auto hide</string>
    <string name="autoHideExplanation">Arcane Tracker can unfortunately not detect when Hearthstone is closed. This setting will hide Arcane Tracker if your phone is in portrait mode. Note that Arcane Tracker will continue running in the background and might show its overlay again if you open another landscape app.</string>
    <string name="blessing_of_kings">Blessing of Kings - %s</string>
    <string name="blessing_of_kings_purchased">You\'ve blessed Arcane Tracker. Thanks! 👑</string>
    <string name="buttonSize">Buttons size</string>
    <string name="cancel">cancel</string>
    <string name="cannot_find_deck">Could not find last used deck</string>
    <string name="cannot_get_latest_cards">Cannot get latest cards information</string>
    <string name="cannot_launch">Cannot launch Hearthstone. Is it installed?</string>
    <string name="cannot_locate_heathstone_install">Cannot locate Hearthstone install directory</string>
    <string name="cannotLinkTrackobot">Cannot link trackobot account :(</string>
    <string name="card">Card [%s]</string>
    <string name="cardsLanguage">Cards Language</string>
    <string name="changeDeck">Change active deck</string>
    <string name="clazz">Class</string>
    <string name="clickOpponent">Click here to see your opponent\'s deck.</string>
    <string name="clickPlayer">Click here to see your deck.</string>
    <string name="continue_">Yes! let\'s play!</string>
    <string name="cost">Cost:</string>
    <string name="could_not_find_replay">Could not find replay :-(</string>
    <string name="couldNotFindTrackobotFile">Could not find a \'.track-o-bot\' file</string>
    <string name="couldNotGetProfile">Could not get profile link, please try again</string>
    <string name="couldNotOpenTrackobotFile">Could not open .track-o-bot file</string>
    <string name="createAccount">Create new account</string>
    <string name="createdBy">Created by: %s</string>
    <string name="createDeck">Create Deck</string>
    <string name="cVersion">Version %s</string>
    <string name="deck">Deck</string>
    <string name="deckName">Deck name:</string>
    <string name="decribeYourProblem">Please describe your problem here</string>
    <string name="delete">Delete</string>
    <string name="deleteConfirm">Are you sure you want to delete this deck?</string>
    <string name="deleteDeck">Delete deck</string>
    <string name="diedTurn">Died turn: %d</string>
    <string name="dinosize">Dinosize Arcane Tracker!!! - %s</string>
    <string name="dinosize_purchased">Dinosize in progress… 🥚</string>
    <string name="donate">Donate</string>
    <string name="donateExplanation">Arcane Tracker is free and without ads. It’s made by only one person (me) in his spare time (nights). If you like the app, please consider donating through the buttons below, it’ll allow me to spend more time coding new features :-).</string>
    <string name="donateExplanation2">May the light be with you!</string>
    <string name="done">Done</string>
    <string name="drawerSize">Drawer size</string>
    <string name="drawnTurn">Drawn turn: %d</string>
    <string name="editDeck">Edit deck</string>
    <string name="erase_history">Delete all</string>
    <string name="explanation1">Arcane Tracker will now start Hearthstone and monitor the cards you and your opponent play in the background.</string>
    <string name="explanation2">The overlay will show what has been played as well as the cards remaining in your deck on top of the Game.</string>
    <string name="explanation3">May the Light bring you victory!</string>
    <string name="general">General</string>
    <string name="gotIt">GOT IT</string>
    <string name="graveyard">Graveyard</string>
    <string name="hand">Hand</string>
    <string name="helpUs">Help Arcane Tracker</string>
    <string name="hi_there">Hi There!</string>
    <string name="history">Your games</string>
    <string name="historyEmpty">Your history is empty. Games will show up here after you play them.</string>
    <string name="holy_light">Holy Light - %s</string>
    <string name="holy_light_purchased">Thank you for the holy light. 🙏</string>
    <string name="hsReplayClaim">Claim your replays</string>
    <string name="hsReplayClaimed">Replays claimed by %1$s</string>
    <string name="hsReplayClaimFailed">Could not claim replays</string>
    <string name="hsReplayDisable">Disable HSReplay.net</string>
    <string name="hsReplayEnable">Enable HSReplay.net</string>
    <string name="hsreplayError">Could not upload to HSReplay.net :-(</string>
    <string name="hsReplayExplanation">Automatically upload your games to https://hsreplay.net</string>
    <string name="hsReplayExplanationNoUserName">You have enabled HSReplay.net. Your games are now uploaded to hsreplay.net. You can check them from the \'game history\' menu. By claiming them using the button below, they will also be linked to your hsreplay account.</string>
    <string name="hsReplayExplanationWithUserName">You have enabled HSReplay.net game uploads. The games have been claimed by user: \'%s\'.</string>
    <string name="hsReplayLinkedTo">Linked to HSReplay.net account %s</string>
    <string name="hsReplayLinkError">Could not link HSReplay.net account</string>
    <string name="hsreplaySuccess">Game uploaded to HSReplay.net</string>
    <string name="hsReplayTokenError">Could not enable HSReplay.net, please try again later</string>
    <string name="hsReplayUsernameError">Cannot check claim status</string>
    <string name="iabError">Could not retrieve details :-(. Please come back later.</string>
    <string name="importDeck">Import deck</string>
    <string name="importExplanation">Put your .track-o-bot at the root of your phone storage for Arcane Tracker to recognize it</string>
    <string name="importFromStorage">Import Account from storage</string>
    <string name="inDeck">In deck</string>
    <string name="keyword">keyword</string>
    <string name="language">Language</string>
    <string name="learn_more">Learn more</string>
    <string name="linkAccount">Link existing account</string>
    <string name="loss">LOSS</string>
    <string name="mulliganed">M</string>
    <string name="newDeck">New deck</string>
    <string name="next">next</string>
    <string name="no">No</string>
    <string name="noBrowserFound">No external browser found to open url. Please install chrome or any other browser.</string>
    <string name="noEmailFound">No email application found</string>
    <string name="noInfoYet">In deck</string>
    <string name="noScreenCapture">You did not allow screen capture, rank detection will not work. You can change this in the settings later.</string>
    <string name="ok">ok</string>
    <string name="oops_permission">Oops, it appears you are missing some permissions</string>
    <string name="openInBrowser">Open profile (external browser)</string>
    <string name="opponentsDeck">Opponent\'s Deck</string>
    <string name="or">or</string>
    <string name="overlay_explanation">You need to enable the overlay permissions for Arcane Tracker to be displayed. The can be done in your phone settings.</string>
    <string name="overlayOpacity">Overlay opacity</string>
    <string name="password">Password:</string>
    <string name="permissions">Arcane Tracker needs storage and overlay permissions in order to monitor the game and display its overlay.</string>
    <string name="play">Play!</string>
    <string name="played">Played</string>
    <string name="playedTurn">Played Turn: %d</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="please_stop_hearthstone">One last thing.</string>
    <string name="pleaseEnablePermissions">Please enable permissions</string>
    <string name="pleaseRestart">Please restart Arcane Tracker to take the modifications into account.</string>
    <string name="possibleSecrets">Possible secrets:</string>
    <string name="purchase_failed">Something went wrong :-(</string>
    <string name="quit">Quit</string>
    <string name="quitArcaneTracker">Quit Arcane Tracker</string>
    <string name="race_beast">Beast</string>
    <string name="race_demon">Demon</string>
    <string name="race_dragon">Dragon</string>
    <string name="race_mechanical">Mech</string>
    <string name="race_murloc">Murloc</string>
    <string name="race_pirate">Pirate</string>
    <string name="race_totem">Totem</string>
    <string name="rename">rename</string>
    <string name="renameDeck">Rename deck</string>
    <string name="reset">reset</string>
    <string name="resetCache">Reset Cache</string>
    <string name="resetConfirm">Are you sure you want to reset the counter?</string>
    <string name="resetCounter">Reset Win/Loss counter</string>
    <string name="retrievePassword">If you don\'t know your password, check https://github.com/HearthSim/arcane_tracker/issues/2 for how to retrieve it</string>
    <string name="screenCaptureExplanation">You need to enable screen capture for rank detection to work.</string>
    <string name="screenCaptureTitle">Enable Screen Capture</string>
    <string name="search">Search:</string>
    <string name="secret">Secret</string>
    <string name="secrets">Secrets</string>
    <string name="secretText">This is hidden until a secret action occurs… Watch out!</string>
    <string name="sendFeedback">send feedback</string>
    <string name="settings">Settings</string>
    <string name="setWinLoss">Won - Lost</string>
    <string name="showNextTime">show next time</string>
    <string name="showWhatsNew">Show what\'s new</string>
    <string name="stop_hearthstone_explanation">Please make sure Hearthstone is stopped before continuing. If it\'s not stopped, detection might not work until the next time you restart it.</string>
    <string name="thank_you">Thank You!!!!</string>
    <string name="thisIsArcaneTracker">This is Arcane Tracker version %1$s%2$s</string>
    <string name="trackobotConnectError">Could not connect to Track-o-bot</string>
    <string name="trackobotError">Could not upload to Track-o-bot :-(</string>
    <string name="trackobotExplanation">Linking a Track-o-bot account will allow you to track your stats on https://trackobot.com</string>
    <string name="trackobotHttpError">Track-o-bot HTTP error: %1$d</string>
    <string name="useClipboardDeck">You can now create decks automatically with deckstrings. Paste a deckstring below to start.\nIf you already have one in your pastebin, it will be pre-filled.</string>
    <string name="welcome">Welcome to Arcane Tracker!</string>
    <string name="enterDeckstring">Paste your deckstring here</string>
    <string name="useDeckString">Use Deckstring above</string>
    <string name="useNewDeck">Create new empty deck</string>
    <string name="yourDecks">Stats</string>
    <string name="yourPacks">Your packs</string>
    <string name="myReplays">My Replays</string>
    <string name="exploreDecks">Explore Decks</string>
    <string name="premium">Premium</string>
    <string name="games">Games</string>
</resources>