<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialogGray"
        android:orientation="vertical">


        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="left"
            android:padding="13dp"
            android:text="@string/settings"
            android:textColor="@color/dialogText"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/games"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="left"
            android:padding="13dp"
            android:text="@string/games"
            android:textColor="@color/dialogText"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/yourDecks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="left"
            android:padding="13dp"
            android:text="@string/yourDecks"
            android:textColor="@color/dialogText"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/yourPacks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="left"
            android:padding="13dp"
            android:text="@string/yourPacks"
            android:textColor="@color/dialogText"
            android:visibility="gone"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="left"
            android:padding="13dp"
            android:text="@string/quit"
            android:textColor="@color/dialogText"
            android:textSize="18sp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
