<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/changeDeck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="left"
            android:background="?android:selectableItemBackground"
            android:padding="13dp"
            android:text="@string/changeDeck"
            android:textColor="@android:color/primary_text_light" />
        <TextView
            android:id="@+id/editDeck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="left"
            android:background="?android:selectableItemBackground"
            android:padding="13dp"
            android:text="@string/editDeck"
            android:textColor="@android:color/primary_text_light" />
        <TextView
            android:id="@+id/deleteDeck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="left"
            android:background="?android:selectableItemBackground"
            android:padding="13dp"
            android:text="@string/deleteDeck"
            android:textColor="@android:color/primary_text_light" />
        <TextView
            android:id="@+id/renameDeck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="left"
            android:background="?android:selectableItemBackground"
            android:padding="13dp"
            android:text="@string/renameDeck"
            android:textColor="@android:color/primary_text_light" />
        <TextView
            android:id="@+id/createDeck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="left"
            android:background="?android:selectableItemBackground"
            android:padding="13dp"
            android:text="@string/newDeck"
            android:textColor="@android:color/primary_text_light" />

    </LinearLayout>
</android.support.v7.widget.CardView>
