<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="left"
            android:padding="13dp"
            android:text="@string/donate"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="left"
            android:padding="13dp"
            android:text="@string/settings"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/hsReplayHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="left"
            android:padding="13dp"
            android:text="@string/history"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="left"
            android:padding="13dp"
            android:text="@string/quit"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
